Added multi-language support (alpha)
I remaked the view engine adapter to support multi-languages. The
Chinese translation is not ready yet.

--- a/view/en/about.html
+++ b/view/en/about.html
@@ -29,7 +29,7 @@
 	</head>
 	<body>
 		<div class="container-narrow">
-			<div class="navbar navbar-static-top">
+			<div class="navbar navbar-inverse">
 				<div class="navbar-inner">
 					<a class="brand" href="/">PollEndpoint</a>
 					<ul class="nav">
@@ -46,13 +46,11 @@
 					</ul>
 				</div>
 			</div>
-		<hr>
 		<div class="jumbotron">
 			<h1>PollEndpoint</h1>
 			<p class="lead">About</p>
 		</div>
-		<hr>
-		<div itemscope itemtype="http://schema.org/AboutPage">
+		<div itemscope itemtype="http://schema.org/AboutPage" class="content">
 			<div class="jumbotron">
 				<h2 itemprop="headline">It's for you to create questionnaires, surveys and polls in no time.</h2>
 				<p>It's created for ease of use so if you have anything to complain please contact us.</p>
@@ -83,7 +81,6 @@
 					</div>
 				</div>
 			</div>
-			<hr>
 			<div id="disqus_thread"></div>
 			<script type="text/javascript">
 			/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
@@ -99,7 +96,6 @@
 			<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 			<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 		</div>
-		<hr>
 		<div class="footer">
 			<p>&copy; PollEndpoint <%= '2013 - ' + (new Date).getFullYear() == 2013 ? '' : (new Date).getFullYear() %></p>
 		</div>
