--- a/view/en/thanks.html
+++ b/view/en/thanks.html
@@ -29,7 +29,7 @@
 	</head>
 	<body>
 		<div class="container-narrow">
-			<div class="navbar navbar-static-top">
+			<div class="navbar navbar-inverse">
 				<div class="navbar-inner">
 					<a class="brand" href="/">PollEndpoint</a>
 					<ul class="nav">
@@ -46,31 +46,30 @@
 					</ul>
 				</div>
 			</div>
-		<hr>
 		<div class="jumbotron">
 			<h1>PollEndpoint</h1>
 			<p class="lead">Thanks for filling in this poll.</p>
 		</div>
-		<hr>
-		<h2>Try PollEndpoint, an high performance, open-source question platform by Licson Lee.</h2>
-		<div class="row-fluid marketing">
-			<div class="span6">
-				<h4>Hi Performance</h4>
-				<p>PollEndpoint uses node.js, a platform for data-intensive applications, to handle the load. It's highly-scalable and event-driven that makes it fast and reliable.</p>
-				
-				<h4>Search engines optimized</h4>
-				<p>PollEndpoint is optimized for search engines to allow your questions to be spread widely.</p>
-				<p>We adopt the use of HTML5 microdata to let search engines have a better understanding of the questions.</p>
-			</div>
-			<div class="span6">
-				<h4>Easy to setup</h4>
-				<p>No accounts required. Just create the questions and that's it. (Statistics are public to everyone)</p>
-				
-				<h4>User-friendly interface</h4>
-				<p>Answer your questions in a natural way! No ads on every page and we'll never have ads.</p>
+		<div class="content">
+			<h2>Try PollEndpoint, an high performance, open-source question platform by Licson Lee.</h2>
+			<div class="row-fluid marketing">
+				<div class="span6">
+					<h4>Hi Performance</h4>
+					<p>PollEndpoint uses node.js, a platform for data-intensive applications, to handle the load. It's highly-scalable and event-driven that makes it fast and reliable.</p>
+					
+					<h4>Search engines optimized</h4>
+					<p>PollEndpoint is optimized for search engines to allow your questions to be spread widely.</p>
+					<p>We adopt the use of HTML5 microdata to let search engines have a better understanding of the questions.</p>
+				</div>
+				<div class="span6">
+					<h4>Easy to setup</h4>
+					<p>No accounts required. Just create the questions and that's it. (Statistics are public to everyone)</p>
+					
+					<h4>User-friendly interface</h4>
+					<p>Answer your questions in a natural way! No ads on every page and we'll never have ads.</p>
+				</div>
 			</div>
 		</div>
-		<hr>
 		<div class="footer">
 			<p>&copy; PollEndpoint <%= '2013 - ' + (new Date).getFullYear() == 2013 ? '' : (new Date).getFullYear() %></p>
 		</div>
