--- a/view/en/create.html
+++ b/view/en/create.html
@@ -20,12 +20,11 @@
 		<script type="text/javascript" src="assets/js/jquery.form.js"></script>
 		<script type="text/javascript" src="assets/js/jquery.validate.min.js"></script>
 		<script type="text/javascript" src="assets/js/jquery.tagsinput.min.js"></script>
-		<script type="text/javascript" src="assets/js/intro.js"></script>
 		<script type="text/javascript" src="assets/js/page_create.js"></script>
 	</head>
 	<body>
 		<div class="container-narrow">
-			<div class="navbar navbar-static-top">
+			<div class="navbar navbar-inverse">
 				<div class="navbar-inner">
 					<a class="brand" href="/">PollEndpoint</a>
 					<ul class="nav">
@@ -42,80 +41,66 @@
 					</ul>
 				</div>
 			</div>
-		<hr>
 		<div class="jumbotron">
 			<h1>Create a Poll</h1>
 			<p>Start creating a poll here.</p>
 		</div>
-		<hr>
 		<div id="status">
 			<div class="alert" style="display:none;">
 				<a href="#" class="close">&times;</a>
 				<strong>Warning!</strong> <span class="message"></span>
 			</div>
 		</div>
-		<div class="row-fluid">
-			<div class="span4" id="step_1" data-intro="Fill in the basic information first..." data-step="1">
-				<h4>First Step</h4>
-				<p>Enter the basic information about the questionnaire.</p>
+		<div id="msform">
+			<ul id="progressbar">
+				<li class="active">Basic Information</li>
+				<li>Set the Questions</li>
+			</ul>
+			<fieldset>
+				<h2 class="fs-title">Basic Information</h2>
+				<h3 class="fs-subtitle">Fill in the basic information of your poll / questionnaire.</h3>
 				<form id="basic_info" action="/create/save/basic_info" method="POST">
 					<input type="text" name="name" placeholder="The name of the poll" />
 					<input type="text" name="keywords" placeholder="Keywords of your poll (For search engines)" />
 					<textarea name="desc" placeholder="Description"></textarea>
-					<input type="submit" id="proceed_1" class="btn" value="Proceed" />
+					<input type="button" name="next" class="next action-button" id="proceed_1" value="Next" />
 				</form>
-			</div>
-			<div class="span4">
-				<h4>Step 2</h4>
-				<p>Set the questions of your poll</p>
-				<a href="#ques_dialog" data-toggle="modal" class="btn">Set the questions</a>
-			</div>
-			<div class="span4">
-				<h4>Step 3</h4>
-				<p>Submit your poll</p>
-				<button class="btn" id="send" title="Hey!" data-content="Click here to submit!" data-intro="Click this to submit." data-step="4">Submit</button>
-			</div>
-		</div>
-		<em>Please pay attention: all questionnaires created without questions will considered as nothing and will be deleted from our database within an hour since it has been created. Do not spam our system through empty questionnaires. Also, please remember to click the proceed button in step 2 or else a questionnaire will NOT be correctly created.</em>
-		<div class="modal hide fade" id="ques_dialog" data-intro="Then, add some questions here." data-step="2">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h3>Set the questions</h3>
-			</div>
-			<div class="modal-body">
-				<div>
-					<button id="add" class="btn pull-right">Add question</button>
-					<form action="/create/save/questions" method="POST" id="question_form">
-						<div id="question_sets">
-							<div class="question well">
-								<input type="hidden" value="" name="questions[belongs]" class="p_id required"/>
-								<label>Title 
-									<input name="questions[name]" type="text" placeholder="Name of the question" title="Name of the question" class="required" />
-								</label>
-								<label>Type of the question 
-									<select name="questions[type]" title="Type of question" class="required">
-										<option value="fillin">Fill in the blanks</option>
-										<option value="mc">Multiple Choices</option>
-										<option value="mmc">Multiple Answers</option>
-									</select>
-								</label>
-								<label>Choices (Only for Multiple Choices and Multiple Answers) 
-									<input type="text" name="questions[choices]" placeholder="Choices" title="Type in each choice and press enter to enter another choice." class="tags" />
-								</label>
-								<label>Required 
-									<input type="checkbox" name="questions[required]" value="1" checked class="required"/>
-								</label>
-							</div>
+			</fieldset>
+			<fieldset>
+				<h2 class="fs-title">Set the Questions</h2>
+				<h3 class="fs-subtitle">Set your questions and you're done!</h3>
+				<button id="add" class="btn pull-right">Add question</button>
+				<form action="/create/save/questions" method="POST" id="question_form">
+					<div id="question_sets">
+						<div class="question well">
+							<input type="hidden" value="" name="questions[belongs]" class="p_id required"/>
+							<label>Title 
+								<input name="questions[name]" type="text" placeholder="Name of the question" title="Name of the question" class="required" />
+							</label>
+							<label>Type of the question 
+								<select name="questions[type]" title="Type of question" class="required">
+									<option value="fillin">Fill in the blanks</option>
+									<option value="mc">Multiple Choices</option>
+									<option value="mmc">Multiple Answers</option>
+								</select>
+							</label>
+							<label>Choices (Only for Multiple Choices and Multiple Answers) 
+								<input type="text" name="questions[choices]" placeholder="Choices" title="Type in each choice and press enter to enter another choice." class="tags" />
+							</label>
+							<label>Required 
+								<input type="checkbox" name="questions[required]" value="1" checked class="required"/>
+							</label>
 						</div>
-					</form>
-				</div>
-				<div style="display:none;">Please wait...</div>
-			</div>
-			<div class="modal-footer">
-				<a href="#" id="proceed_2" class="btn" data-intro="Click this to save." data-step="3">Proceed</a>
-			</div>
+					</div>
+					<input type="button" name="previous" class="previous action-button" value="Previous" />
+					<input type="submit" name="submit" class="submit action-button" id="proceed_2" value="Submit" />
+				</form>
+			</fieldset>
 		</div>
-		<hr>
+		<span class="clearfix"></span>
+		<div class="content">
+			<em>Please pay attention: all questionnaires created without questions will considered as nothing and will be deleted from our database within an hour since it has been created. Do not spam our system through empty questionnaires. Also, please remember to click the proceed button in step 2 or else a questionnaire will NOT be correctly created.</em>
+		</div>
 		<div class="footer">
 			<p>&copy; PollEndpoint <%= '2013 - ' + (new Date).getFullYear() == 2013 ? '' : (new Date).getFullYear() %></p>
 		</div>
